--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                     <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" />
                     <img src="./eks.svg" />
                 </div>
-                <p>Paragraph</p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
             </div>
             <div class="contact-wrapper">
                 <div class="description">
