--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="./style.css" />
         <meta charset="utf-8" />
+        <link rel="icon" href="./favicon.png" type="image/x-icon">
     </head>
     <body>
         <div class="container" id="container">
