--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <img src="./image.jpg" alt="profile image" />
                         <div>
                             <p>
-                            Hi, I'm Enes and a passionate Electrical Engineering student at Istanbul Technical University. I'm a Senior Software Developer and interested in Architectural Design of softwares
+                            Hi, I'm Enes and a passionate Electrical Engineering student at Istanbul Technical University. I'm a Software Developer and interested in Architectural Design of softwares
                             </p>
                             <p>I'm interested in ML, DL, Blockchain, Web3, Distributed Systems</p>
                         </div>
